--- a/src/about.html
+++ b/src/about.html
@@ -13,7 +13,7 @@
     <header id="header-inner">
       <div class="container">
         <nav id="main-nav">
-          <img src="img/logo.png" alt="My Portfolio" id="logo" />
+          <img src="img/other/logo.png" alt="My Portfolio" id="logo" />
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html" class="current">About</a></li>
@@ -30,7 +30,7 @@
         <div class="bottom-line"></div>
         <p class="lead">Let me tell you a little about myself and what I do.</p>
         <div class="about-info">
-          <img src="img/about.jpg" alt="Me" class="bio-image" />
+          <img src="img/other/about.jpg" alt="Me" class="bio-image" />
           <div class="bio bg-light">
             <h4>Your Project Is In Safe Hands</h4>
             <p>
